K8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          # Backend routes FIRST (important)
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

          # Frontend (React)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
